--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -11,8 +11,7 @@
       }
     
       &::-webkit-scrollbar-thumb {
-        background-color:  gray ;
-        border-radius: 8px;
+        background-color:  rgb(32, 32, 32) ;
       }
       &::-webkit-scrollbar-track {
         background: white;
