--- a/src/styles/Projects.module.scss
+++ b/src/styles/Projects.module.scss
@@ -1,8 +1,65 @@
-.projects{
-    height: 100vh;
-    padding-top: 80px;
-    width: calc(100vw - 15px);
-    color: black;
-    background-color: blue;
-    
+.projects {
+  min-height: 100vh;
+  width: calc(100vw - 15px);
+  color: black;
+  padding: 80px 0;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .project {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    .info {
+        text-align: center;
+      h2 {
+        color: blue;
+        font-weight: 600;
+      }
+      p {
+        font-weight: 600;
+        width: 360px;
+      }
+      .tech{
+        text-align: center;
+        font-weight: 600;
+        font-size: larger;
+        span{
+            margin: 10px;
+        }
+      }
+      .links{
+        text-align: center;
+        font-weight: 600;
+        font-size: larger;
+        padding-top: 30px;
+        a{
+            margin: 0 15px;
+            color: black;
+            cursor: pointer;
+            &:hover{
+                color: blue;
+                transform: scale(1.2);
+              }
+        }
+      }
+    }
+    img {
+      height: 360px;
+      width: 720px;
+      margin: 0 20px;
+      &:hover{
+        border: 2px solid black;
+      }
+    }
+  }
+  .project:nth-child(odd) {
+    margin-right: 500px;
+  }
+
+  .project:nth-child(even) {
+    margin-left: 500px;
+  }
 }
