--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -1,23 +1,36 @@
+.app {
+  height: 100vh;
+  background-color: white;
+  width: 100vw;
+  overflow: auto;
+  font-family: Poppins, sans-serif;
+  
+  
+  &::-webkit-scrollbar {
+    width: 15px;
+    height: 15px;
+  }
 
-.app{
-    height: 100vh;
-    background-color: white;
-    width: 100vw;
-    overflow: auto;
-    font-family: Poppins, sans-serif;
-    
+  &::-webkit-scrollbar-thumb {
+    background-color: rgb(90, 90, 90);
+    border-radius: 15px;
+  }
+  &::-webkit-scrollbar-track {
+    background: #f9f9f9;
+  }
+}
+
+//Media queries:
+@media screen and (max-width: 900px) {
+  .app {
+    /* Hide scrollbar for Chrome, Safari and Opera */
     &::-webkit-scrollbar {
-        width: 15px;
-      }
-    
-      &::-webkit-scrollbar-thumb {
-        background-color:  rgb(32, 32, 32) ;
-      }
-      &::-webkit-scrollbar-track {
-        background: white;
-      }
-
-      .container{
-        
-      }
+      display: none;
+    }
+    .app::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
