--- a/src/styles/Projects.module.scss
+++ b/src/styles/Projects.module.scss
@@ -2,8 +2,8 @@
   min-height: 100vh;
   width: calc(100vw - 15px);
   color: black;
-  padding: 80px 0;
-  background-color: white;
+  padding: 132px 0;
+  background-color: #f9f9f9;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,7 +13,7 @@
     align-items: center;
     padding: 20px;
     .info {
-        text-align: center;
+      text-align: center;
       h2 {
         color: blue;
         font-weight: 600;
@@ -22,27 +22,27 @@
         font-weight: 600;
         width: 360px;
       }
-      .tech{
+      .tech {
         text-align: center;
         font-weight: 600;
         font-size: larger;
-        span{
-            margin: 10px;
+        span {
+          margin: 10px;
         }
       }
-      .links{
+      .links {
         text-align: center;
         font-weight: 600;
         font-size: larger;
         padding-top: 30px;
-        a{
-            margin: 0 15px;
-            color: black;
-            cursor: pointer;
-            &:hover{
-                color: blue;
-                transform: scale(1.2);
-              }
+        a {
+          margin: 0 15px;
+          color: black;
+          cursor: pointer;
+          &:hover {
+            color: blue;
+            transform: scale(1.2);
+          }
         }
       }
     }
@@ -50,7 +50,7 @@
       height: 360px;
       width: 720px;
       margin: 0 20px;
-      &:hover{
+      &:hover {
         border: 2px solid black;
       }
     }
