--- a/src/styles/Projects.module.scss
+++ b/src/styles/Projects.module.scss
@@ -11,21 +11,24 @@
   .project {
     display: flex;
     align-items: center;
-    padding: 20px;
-    .info {
-      text-align: center;
+    padding: 30px;
+    .info { display: flex;
+      flex-direction: column;
+      align-items: center;
       h2 {
         color: blue;
+        font-size: 2rem;
         font-weight: 600;
       }
       p {
+        font-size: 1.5rem;
         font-weight: 600;
-        width: 360px;
+        width: 600px;
       }
       .tech {
         text-align: center;
         font-weight: 600;
-        font-size: larger;
+        font-size: 1.5rem;
         span {
           margin: 10px;
         }
@@ -47,19 +50,33 @@
       }
     }
     img {
-      height: 360px;
-      width: 720px;
-      margin: 0 20px;
+      height: 480px;
+      width: 960px;
+      margin: 0 40px;
       &:hover {
         border: 2px solid black;
       }
     }
   }
-  .project:nth-child(odd) {
-    margin-right: 500px;
-  }
+  @media screen and (min-width:1081px) {
+    
+    .project:nth-child(odd) {
+      margin-right: 500px;
+    }
+  
+    .project:nth-child(even) {
+      margin-left: 500px;
+    }
 
-  .project:nth-child(even) {
-    margin-left: 500px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  
+  .projects{
+    .project{
+      flex-direction: column;
+      gap: 120px;
+    }
   }
 }
