--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -37,7 +37,8 @@
   .about{
     flex-direction: column;
     img{
-      width: 80%;
+      width: 60%;
+      margin: 0;
     }
     .section{
       width: 80%;
