--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -2,6 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 200;
     height: 100px;
     width: calc(100vw - 15px);
     background-color: white;
