--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -24,28 +24,31 @@
     }
     h3{
       font-size: 1.6rem;
+      margin: 0;
     }
     p {
-      
+      margin: 10px 0 0 0;
       font-size: 1.2rem;
     }
   }
 }
 
-@media screen and ( max-width: 1080px) {
+@media screen and ( max-width: 900px) {
   
   .about{
     flex-direction: column;
-    padding: 0;
+    gap: 0;
+    padding: 0 20px;
     img{
-      width: 60%;
-      margin: 0;
+      width: 50%;
+      margin: 100px 0 0 0;
     }
     .section{
       width: 80%;
       display:flex;
       flex-direction: column;
       align-items: center;
+      
     }
   }
 }
