--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,5 +1,5 @@
 .home {
-  height: 100vh;
+  height: 100vh !important;
   padding-top: 100px;
   width: calc(100vw - 15px);
   color: black;
@@ -15,12 +15,12 @@
     50% {
       border-radius: 30% 75% 60% 50%/40% 50% 50% 80%;
     }
-    
+
     100% {
       border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     }
   }
-  
+
   .myImage {
     animation: morph 6s ease-in-out infinite;
     background-image: url(../assets/images/20221221141125_IMG_0137.jpg);
@@ -35,7 +35,6 @@
     position: relative;
     transition: all 1s ease-in-out;
     margin-bottom: 400px;
-    
   }
   .info {
     padding: 0 20px;
@@ -43,15 +42,18 @@
     flex-direction: column;
     gap: 50px;
     margin-bottom: 200px;
-    h1{
+    h1 {
       font-size: 4rem;
-      width: 600px;
+      max-width: 600px;
+      margin: 0;
     }
     p {
       font-size: x-large;
       display: flex;
       align-items: center;
       max-width: 600px;
+      margin: 0;
+
     }
     .contact {
       height: 80px;
@@ -66,18 +68,17 @@
         border-right: 3px solid black;
         padding-right: 20px;
         height: 50px;
-        width: 150px;
         display: flex;
         align-items: center;
       }
-      ul{
+      ul {
         display: grid;
         gap: 10px;
         grid-template-columns: repeat(5, 20%);
         list-style: none;
         margin: 0;
         padding: 0 0 0 10px;
-        li{
+        li {
           height: 80px;
           width: 80px;
           display: flex;
@@ -85,7 +86,7 @@
           align-items: center;
           border-radius: 50%;
           background-color: white;
-          box-shadow: 0 6px 6px rgba(0,0,0,.09);
+          box-shadow: 0 6px 6px rgba(0, 0, 0, 0.09);
           .icon {
             height: 45px;
             width: 45px;
@@ -96,24 +97,50 @@
   }
 }
 
-
-@media screen and (max-width: 1080px) {
-  .home{
-    flex-direction:column-reverse;
+@media screen and (max-width: 900px) {
+  .home {
+    flex-direction: column-reverse;
     padding: 0;
-    
-    .myImage{
-margin: 0;
-height: 40rem;
-width: 40rem;
 
+    .myImage {
+      margin: 300px 0 0 0;
+      height: 30rem;
+      width: 24rem;
+    }
+    .info{
+      align-items: center;
+      justify-content: center;
+      h1{
+        font-size: 2rem;
+        text-align: center;
+        margin-top: 20px;
+      }
+      p{
+        font-size: 1.5rem;
+        margin: 0 90px;
+      }
+      .stack{
+        flex-direction: column;
+        align-items: center;
+        span{
+          border: none;
+          border-bottom: 3px solid black;
+          text-align: center;
+          padding: 0;
+        }
+        ul{
+          padding: 0;
+        }
+      }
     }
   }
 }
 @media screen and (max-width: 480px) {
-  .home{
-    .myImage{
-      margin-top: 120px;
+  .home {
+    .myImage {
+      margin: 60px 0 0 0;
+      height: 20rem;
+      width: 20rem;
     }
   }
 }
