--- a/src/styles/Projects.module.scss
+++ b/src/styles/Projects.module.scss
@@ -12,7 +12,8 @@
     display: flex;
     align-items: center;
     padding: 30px;
-    .info { display: flex;
+    .info {
+      display: flex;
       flex-direction: column;
       align-items: center;
       h2 {
@@ -58,25 +59,31 @@
       }
     }
   }
-  @media screen and (min-width:1081px) {
-    
+  @media screen and (min-width: 901px) {
     .project:nth-child(odd) {
       margin-right: 500px;
     }
-  
+
     .project:nth-child(even) {
       margin-left: 500px;
     }
-
   }
 }
 
 @media screen and (max-width: 1080px) {
-  
-  .projects{
-    .project{
+  .projects {
+    .project {
       flex-direction: column;
-      gap: 120px;
+      gap: 20px;
+      .info {
+        h2 {
+          margin: 0;
+        }
+      }
+      img {
+        width: 100%;
+        height: auto;
+      }
     }
   }
 }
