--- a/src/styles/Projects.module.scss
+++ b/src/styles/Projects.module.scss
@@ -2,7 +2,7 @@
   min-height: 100vh;
   width: calc(100vw - 15px);
   color: black;
-  padding: 132px 0;
+  padding: 120px 0;
   background-color: #f9f9f9;
   display: flex;
   flex-direction: column;
@@ -24,7 +24,7 @@
       p {
         font-size: 1.5rem;
         font-weight: 600;
-        width: 600px;
+        max-width: 600px;
       }
       .tech {
         text-align: center;
@@ -70,7 +70,7 @@
   }
 }
 
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 900px) {
   .projects {
     .project {
       flex-direction: column;
@@ -79,10 +79,47 @@
         h2 {
           margin: 0;
         }
+        p {
+          padding: 15px 0;
+          margin: 0;
+        }
+        .links {
+          padding: 10px 0 0 0;
+        }
       }
+
       img {
         width: 100%;
         height: auto;
+      }
+    }
+  }
+}
+@media screen and (max-width: 480px) {
+  .projects {
+    padding: 60px 0;
+    .project {
+      img {
+        width: 110%;
+        height: auto;
+      }
+      .info {
+        h2 {
+          font-size: 1.5rem;
+          margin: 0;
+        }
+        p {
+          font-size: 1rem;
+          padding: 15px 0;
+          margin: 0;
+        }
+        .tech{
+          font-size: 1.2rem;
+        }
+        .links {
+          font-size: 1rem;
+          padding: 10px 0 0 0;
+        }
       }
     }
   }
