--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -138,11 +138,11 @@
 @media screen and (max-width: 480px) {
   .home {
     .myImage {
-      margin:   -80px 0 0 0;
+      margin:  0;
       height: 8rem;
       width: 16rem;
-      @media screen and (max-height:800px){
-        margin: 90px 0 0 0;
+      @media screen and (max-height: 800px) {
+        margin-top: 90px;
       }
     }
     .info{
