finished mobile media queries(3)

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -137,8 +137,9 @@
 }
 @media screen and (max-width: 480px) {
   .home {
+    justify-content:start;
     .myImage {
-      margin:  0;
+      margin:  100px 0 0 0;
       height: 8rem;
       width: 16rem;
       @media screen and (max-height: 800px) {
