--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -5,7 +5,6 @@
   overflow: auto;
   font-family: Poppins, sans-serif;
   
-  
   &::-webkit-scrollbar {
     width: 15px;
     height: 15px;
@@ -15,12 +14,63 @@
     background-color: rgb(90, 90, 90);
     border-radius: 15px;
   }
+
   &::-webkit-scrollbar-track {
-    background: #f9f9f9;
+    background: #c9c9c9;
+  }
+
+  &.dark-mode {
+    background-color: #222;
+    color: #fff;
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #c9c9c9;
+    }
+    &::-webkit-scrollbar-track {
+      background: black;
+    }
   }
 }
 
-//Media queries:
+.theme {
+  position: fixed;
+  bottom: 3rem;
+  right: 4rem;
+
+  .LightModeIcon {
+    background-color: rgb(214, 255, 255);
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    color: gold;
+    padding: 5px;
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.09);
+
+    &:hover {
+      transform: scale(1.1);
+      transition: transform 0.3s ease-in-out;
+      cursor: pointer;
+    }
+  }
+
+  .DarkModeIcon {
+    background-color: darkblue;
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    color: yellow;
+    padding: 5px;
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.09);
+
+    &:hover {
+      transform: scale(1.1);
+      transition: transform 0.3s ease-in-out;
+      cursor: pointer;
+    }
+  }
+}
+
+// Media queries:
 @media screen and (max-width: 900px) {
   .app {
     /* Hide scrollbar for Chrome, Safari and Opera */
@@ -32,5 +82,21 @@
     }
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
+  }
+}
+@media screen and (max-width: 480px){
+  .app{
+    .theme{
+      bottom: 2rem;
+      right: 2rem;
+      .LightModeIcon{
+        height: 4rem;
+        width: 4rem;
+      }
+      .DarkModeIcon{
+        height: 4rem;
+        width: 4rem;
+      }
+    }
   }
 }
