--- a/src/styles/Contact.module.scss
+++ b/src/styles/Contact.module.scss
@@ -7,6 +7,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  &.dark-mode{
+    background-color: black;
+  }
   
    .contactMe{
     font-size: 2rem;
