--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -12,6 +12,10 @@
     color: black;
     box-shadow: 0 0 10px rgba(0,0,0,.09);
 
+    &.dark-mode{
+        background-color: #141628;
+        color: white;
+    }
     .heading{
         font-size: xx-large;
         font-weight: 800;
