--- a/src/styles/Projects.module.scss
+++ b/src/styles/Projects.module.scss
@@ -8,6 +8,21 @@
   flex-direction: column;
   align-items: center;
 
+  &.dark-mode{
+    background-color: #1B1E32;
+    color: white;
+    .project{
+      .info{
+      .links{
+        a{
+          color: white;
+        }
+      }
+    }
+    }
+    
+  }
+
   .project {
     display: flex;
     align-items: center;
