--- a/src/styles/Projects.module.scss
+++ b/src/styles/Projects.module.scss
@@ -24,14 +24,16 @@
   }
 
   .project {
+    width: 100%;
     display: flex;
     align-items: center;
     padding: 40px 80px;
-    gap: 30px;
+    justify-content: space-evenly;
     .info {
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
       h2 {
         color: blue;
         font-size: 2rem;
@@ -46,16 +48,20 @@
         text-align: center;
         font-weight: 600;
         font-size: 1.5rem;
+        white-space: nowrap;
+
         span {
           margin: 10px;
         }
       }
       .links {
+        display: flex;
         text-align: center;
         font-weight: 600;
         font-size: larger;
         padding-top: 30px;
         a {
+          white-space: nowrap;
           margin: 0 10px;
           color: black;
           cursor: pointer;
@@ -67,6 +73,7 @@
       }
     }
     img {
+      border-radius: 10px;
       height: 480px;
       width: 960px;
       margin: 0 20px;
@@ -77,15 +84,7 @@
       }
     }
   }
-  @media screen and (min-width: 1024px) {
-    .project:nth-child(odd) {
-      margin-right: 500px;
-    }
 
-    .project:nth-child(even) {
-      margin-left: 500px;
-    }
-  }
 }
 
 @media screen and (max-width: 1024px) {
