--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -52,26 +52,26 @@
     background-size: cover;
     border: 3px solid #2d2e32;
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    height: 25rem;
-    width: 25rem;
+    height: 20rem;
+    width: 20rem;
     min-height: 30%;
     position: relative;
     transition: all 1s ease-in-out;
-    margin-bottom: 400px;
+    margin: 0 20px 280px 0;
   }
   .info {
     padding: 0 20px;
     display: flex;
     flex-direction: column;
-    gap: 50px;
-    margin-bottom: 200px;
+    gap: 20px;
+    margin-bottom: 50px;
     h1 {
-      font-size: 4rem;
+      font-size: 3rem;
       max-width: 600px;
       margin: 0;
     }
     p {
-      font-size: x-large;
+      font-size: large;
       display: flex;
       align-items: center;
       max-width: 600px;
@@ -85,7 +85,7 @@
       display: flex;
       align-items: first baseline;
       gap: 20px;
-      font-size: x-large;
+      font-size: large;
       span {
         border-right: 3px solid black;
         padding-right: 20px;
@@ -101,8 +101,9 @@
         margin: 0;
         padding: 0 0 0 10px;
         li {
-          height: 80px;
-          width: 80px;
+          height: 50px;
+          width: 50px;
+          overflow:hidden;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -121,15 +122,17 @@
 
 @media screen and (max-width: 900px) {
   .home {
-    flex-direction: column-reverse;
+    // flex-direction: column-reverse;
     padding: 0;
 
     .myImage {
-      margin: 300px 0 0 0;
-      height: 30rem;
+      margin: 0px 0 20px 0;
+      height: 20rem;
       width: 24rem;
+      min-width: 16rem;
     }
     .info {
+      margin-top: 100px;
       align-items: center;
       justify-content: center;
       h1 {
@@ -138,10 +141,11 @@
         margin-top: 20px;
       }
       p {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         margin: 0 90px;
       }
       .stack {
+        font-size: 1.2rem;
         flex-direction: column;
         align-items: center;
         span {
@@ -159,6 +163,7 @@
 }
 @media screen and (max-width: 640px) {
   .home {
+    flex-direction: column-reverse;
     justify-content: start;
     .myImage {
       margin: 100px 0 0 0;
