--- a/src/styles/Projects.module.scss
+++ b/src/styles/Projects.module.scss
@@ -2,7 +2,7 @@
   min-height: 100vh;
   width: calc(100vw - 15px);
   color: black;
-  padding: 120px 0;
+  padding: 50px 0;
   background-color: #f9f9f9;
   display: flex;
   flex-direction: column;
@@ -27,31 +27,40 @@
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content:end;
     padding: 40px 80px;
-    justify-content: space-evenly;
+
     .info {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       h2 {
-        color: blue;
+        color: #00008B;
         font-size: 2rem;
         font-weight: 600;
       }
       p {
-        font-size: 1.5rem;
+        padding: 0 40px;
+        font-size: 1.3rem;
         font-weight: 600;
         max-width: 600px;
+        text-align: center;
       }
       .tech {
         text-align: center;
         font-weight: 600;
-        font-size: 1.5rem;
+        font-size: 1rem;
         white-space: nowrap;
 
         span {
+          border: 1px solid black;
+          padding: 2px 4px;
           margin: 10px;
+          border-radius: 4px;
+          box-shadow: 0 6px 6px rgba(0, 0, 0, 0.09);
+
+          
         }
       }
       .links {
@@ -67,15 +76,16 @@
           cursor: pointer;
           &:hover {
             color: blue;
-            transform: scale(1.2);
+            transform: scale(1.1);
+            transition: ease-in-out 0.2s;
           }
         }
       }
     }
     img {
       border-radius: 10px;
-      height: 480px;
-      width: 960px;
+      height: 360px;
+      width: 720px;
       margin: 0 20px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 4px 8px rgba(0, 0, 0, 0.1);
 
@@ -119,7 +129,7 @@
     .project {
       padding: 20px 40px;
       img {
-        width: 110%;
+        width: 90%;
         height: auto;
       }
       .info {
