--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -1,123 +1,123 @@
 .about {
   height: 100vh;
-  padding-top: 80px;
+  // padding-top: 80px;
   width: calc(100vw - 15px);
   color: black;
   background-color: #f9f9f9;
   display: flex;
-  gap: 60px;
   justify-content: center;
   align-items: center;
-  
+  background-image: url('../assets/images/about.png');
+  background-size: 30%;
+  background-position: center;
+  background-repeat: no-repeat;
+
   &.dark-mode{
     background-color: #1B1E32;
     color: white;
   }
-
-  img {
-    max-width: 400px;
-    border-radius: 10px;
-    margin: 0 0 100px 10px;
-  }
+  
   .section {
-    margin-bottom: 100px;
-    width: 60%;
+    width: 80%;
     h2 {
       color: #00008B;
-      font-size: 2rem;
+      font-size: 4rem;
     }
     h3{
-      font-size: 1.6rem;
+      font-size: 2.5rem;
       margin: 0;
     }
     p {
       margin: 10px 10px 0 0;
-      font-size: 1.2rem;
+      font-size: 1.7rem;
+      font-weight: 500;
+      text-align: justify;
     }
   }
 }
 
-@media screen and ( max-width: 1024px) {
+@media screen and ( max-width: 1280px) {
  .about{
+  background-size: 40%;
+
   .section{
-    margin-right: 20px;
     h2{
-      font-size: 1.6rem;
+      font-size: 3rem;
     }
     h3{
-      font-size: 1.3rem;
+      font-size: 2rem;
     }
     p{
-      font-size: 1rem;
+      font-size: 1.5rem;
     }
   }
  }
 }
+
 @media screen and ( max-width: 900px) {
   
   .about{
-    gap: 20px;
-    padding: 0;
-    img{
-      height: 60%;
-      max-width: 240px;
-      margin: 0 0 0 10px;
-    }
     .section{
-      display:flex;
-      flex-direction: column;
-      align-items: center;
-      
+      h2{
+        font-size: 2.4rem;
+        text-align: center;
+      }
+      h3{
+        font-size: 1.8rem;
+      }
+      p{
+        font-size: 1.3rem;
+      }
     }
   }
 }
+
 @media screen and ( max-width: 640px ) {
   .about{
     width: 100%;
-    padding: 0;
-    flex-direction: column;
-   align-items: center;
-   justify-content: center;
+    background-size: 80%;
 
     .section{
       width: 90%;
-      h2{
-        font-size: 1.2rem;
-      }
       h3{
-        font-size: 1rem;
+        font-size: 1.5rem;
         text-align: center;
       }
       p{
-        font-size: 0.8rem;
+        font-size: 1.2rem;
       }
     }
-    img{
-      height: 180px;
-      width: 300px;
-      min-width: 200px;
+    
+  }
+}
+@media screen and (max-width: 480px){
+  .about{
+    padding-top: 90px;
+    align-items: first baseline;
+    .section{
+      h2{
+        margin: 0 0 10px 0;
+      }
+      p{
+        font-size: 1rem;
+      }
     }
   }
 }
 
-@media screen and (max-height:800px){
+@media screen and (max-width: 360px){
   .about{
-    padding: 60px 0 0 0;
-    img{
-      width: 50%;
-    }
-    section{
+    .section{
       h2{
-        font-size: 1rem;
-        margin: 0;
+        margin: 0 0 10px 0;
       }
       h3{
-        font-size: 0.8rem;
-        text-align: center;
+        font-size: 1rem;
       }
       p{
-        font-size: 0.4rem;
+        font-size: 0.9rem;
       }
     }
   }
- }
+}
+
