--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 8%;
   &.dark-mode {
     background-color: #1b1e32;
     color: white;
@@ -52,26 +53,25 @@
     background-size: cover;
     border: 3px solid #2d2e32;
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    height: 20rem;
-    width: 20rem;
+    height: 60%;
+    min-width: 30%;
     min-height: 30%;
     position: relative;
     transition: all 1s ease-in-out;
-    margin: 0 20px 280px 0;
+    margin: 0 0 16% 0;
   }
   .info {
-    padding: 0 20px;
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 12%;
     h1 {
-      font-size: 3rem;
+      font-size: 4rem;
       max-width: 600px;
       margin: 0;
     }
     p {
-      font-size: large;
+      font-size: x-large;
       display: flex;
       align-items: center;
       max-width: 600px;
@@ -111,8 +111,8 @@
           background-color: white;
           box-shadow: 0 6px 6px rgba(0, 0, 0, 0.09);
           .icon {
-            height: 45px;
-            width: 45px;
+            height: 30px;
+            width: 30px;
           }
         }
       }
@@ -120,19 +120,48 @@
   }
 }
 
+@media screen and (max-width: 1440px) {
+.home{
+  .myImage{
+    height: 40%;
+  }
+  .info{
+    
+  }
+}
+}
+@media screen and (max-width: 1080px) {
+  .home{
+    .myImage{}
+    .info{
+      max-width: 50%;
+      h1{
+        font-size: 3rem;
+      }
+      p{
+        font-size: 1.5rem;
+      
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 900px) {
   .home {
-    // flex-direction: column-reverse;
-    padding: 0;
-
+    width: 100vw;
+    flex-direction: column-reverse;
+    justify-content: start;
+    gap: 0;
     .myImage {
       margin: 0px 0 20px 0;
       height: 20rem;
-      width: 24rem;
+      width: 20rem;
       min-width: 16rem;
     }
     .info {
-      margin-top: 100px;
+      gap: 0;
+      max-width: none;
+      margin: 0;
       align-items: center;
       justify-content: center;
       h1 {
@@ -141,8 +170,9 @@
         margin-top: 20px;
       }
       p {
+        text-align: center;
         font-size: 1.2rem;
-        margin: 0 90px;
+        margin: 0 4%;
       }
       .stack {
         font-size: 1.2rem;
@@ -163,10 +193,9 @@
 }
 @media screen and (max-width: 640px) {
   .home {
-    flex-direction: column-reverse;
-    justify-content: start;
+    gap: 2%;
     .myImage {
-      margin: 100px 0 0 0;
+      margin: 0;
       height: 8rem;
       width: 16rem;
       @media screen and (max-height: 800px) {
@@ -181,7 +210,7 @@
       }
       p {
         font-size: 1rem;
-        margin: 0;
+        margin: 0 10px;
       }
       .contact {
         height: 40px;
@@ -194,16 +223,35 @@
           border-right: 0;
         }
         ul {
-          li {
+          margin-right: 25px ;
+          li{
             height: 40px;
             width: 40px;
-            .icon {
-              height: 20px;
-              width: 20px;
+            .icon{
+              height: 25px;
+              width: 25px;
             }
           }
         }
       }
     }
   }
+}
+
+@media screen and (max-width: 360px) {
+  .home {
+    .myImage {
+      min-width: 0;
+      min-height: 12rem;
+      max-width: 12rem;
+    }
+    .info{
+      .stack{
+          ul{
+            grid-template-columns: repeat(4, 25%);
+          }
+      }
+    }
+  }
+  
 }
