--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -82,7 +82,9 @@
     .navbar{
 
         .logo{
-            font-size: small;
+            width: 60px;
+            height: 30px;
+            background-image: url('../assets/images/logo.png');
         }
         .sections{
             width: 90%;
