--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  
+  --toastify-color-success: transparent;
+  --toastify-icon-color-success: green;
+  --toastify-toast-width: 280px;
 }
 
 a {
