--- a/src/styles/Contact.module.scss
+++ b/src/styles/Contact.module.scss
@@ -6,6 +6,7 @@
   padding: 20px 0;
   display: flex;
   flex-direction: column;
+  gap: 20px;
   align-items: center;
 
   &.dark-mode{
@@ -15,13 +16,11 @@
    .contactMe{
     font-size: 1.5rem;
     text-align: center;
-    margin: 40px 0;
+    // margin: 40px 0;
   } 
   .contactInfo{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex ;
     gap: 40px;
-    justify-content: space-evenly ;
     .icon{
       height:60px;
       width:60px;
@@ -31,24 +30,11 @@
         transform: scale(1.1) rotate(-6deg);
       }
     }
-    .inline{
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      gap : 20px;
-    }
-    .sm{
-      display: flex;
-      align-items: center;
-      gap: 50px;
-      a{
-        color: white;
-        
-      }
-    }
+    
   }
   .rights{
     color: #808080;
+    margin: 0;
   }
   
 }
@@ -58,13 +44,6 @@
       font-size: 1rem;
     }
     .contactInfo{
-      .inline{
-        justify-content: center;
-      }
-      .sm{
-        margin-left: 20px;
-        gap: 20px;
-      }
       .icon{
         height: 50px;
         width: 50px;
@@ -82,17 +61,6 @@
     }
      .contactInfo{
       margin: 0 20px;
-      .inline{
-        justify-content: center;
-        margin-bottom: 20px;
-        gap: 5px;
-        p{
-          font-size: 0.8rem;
-        }
-      }
-      .sm{
-        margin: auto;  
-      }
      }
   }
  
@@ -106,10 +74,9 @@
     }
     .contactInfo{
       display: flex;
-      flex-direction: column;
-      .inline{
-        margin: 0 0 5px 0;
-      }
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
       .icon{
         height: 40px;
         width: 40px;
